@@ -2,3 +2,7 @@ Denis S. Otkidach
 Gregory Golberg
 Bud P. Bruegger
 Jacek Konieczny
+Tanya Tereschenko
+Matěj Cepl
+Alex Gaynor
+Geoffrey Thomas
