@@ -1,5 +1,6 @@
 from pyasn1.type import univ
 from pyasn1.codec.der import decoder
+from pyasn1.compat.octets import ints2octs
 from pyasn1.error import PyAsn1Error
 from sys import version_info
 if version_info[0:2] < (2, 7) or \
@@ -16,5 +17,15 @@ class OctetStringDecoderTestCase(unittest.TestCase):
         assert decoder.decode(
             '\004\017Quick brown fox'.encode()
             ) == ('Quick brown fox'.encode(), ''.encode())
+
+    def testIndefMode(self):
+        try:
+            decoder.decode(
+                ints2octs((36, 128, 4, 15, 81, 117, 105, 99, 107, 32, 98, 114, 111, 119, 110, 32, 102, 111, 120, 0, 0))
+            )
+        except PyAsn1Error:
+            pass
+        else:
+            assert 1, 'indefinite length encoding tolerated'
 
 if __name__ == '__main__': unittest.main()
